# hypre

./: .gitignore  .readthedocs.yml  CHANGELOG  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  COPYING.LESSER  COPYING.LIB  COPYRIGHT  COPYRIGHT_and_DISCLAIMER  COPYRIGHT_and_LICENSE  HYPRE.h  HYPRE_ame.c  HYPRE_config.h  HYPRE_config.h.in  HYPRE_lobpcg.c  HYPRE_lobpcg.h  HYPREf.h  INSTALL  INSTALL.md  LICENSE-MIT  Makefile  Makefile.am  Makefile.in  Makefile.sample  Makefile.template  README  README.md  SUPPORT.md  _hypre_parcsr_ls.h  aclocal.m4  am_macros.m4  build  build_local  casc_fortran.m4  casc_libs_and_headers.m4  casc_misc.m4  casc_mpi.m4  casc_opt_debug.m4  configure  (+11 more)
IJ_mv/: F90_HYPRE_IJMatrix.c  F90_HYPRE_IJVector.c  F90_IJMatrix.c  F90_hypre_IJMatrix.c  HYPRE_IJMatrix.c  HYPRE_IJVector.c  HYPRE_IJ_mv.h  IJMatrix.c  IJMatrix_isis.c  IJMatrix_parcsr.c  IJMatrix_petsc.c  IJVector.c  IJVector_parcsr.c  IJ_matrix.h  IJ_mv.h  IJ_par_laplace_9pt.c  IJ_vector.h  Makefile  Makefile.am  Makefile.in  _hypre_IJ_mv.h  aux_par_vector.c  aux_par_vector.h  aux_parcsr_matrix.c  aux_parcsr_matrix.h  driver.c  headers  headers.h  hypre_IJMatrix_parcsr.c  hypre_IJMatrix_petsc.c  hypre_IJVector.c  hypre_IJVector_parcsr.c
babel/: IJ_linear_solvers_wBabel.c  Interfaces.idl  Makefile  Makefile.am  Makefile.in  README  babel-runall  configure  configure.in  configure.scan  docfix.el  hypre_babel_exception_handler.h
babel-runtime/: HYPRE_README.txt  Makefile  Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.status  configure  configure.ac  libtool
blas/: Makefile  Makefile.am  Makefile.in  Makefile.template  README  blas_utils.c  dasum.c  daxpy.c  dcopy.c  ddot.c  dgels_all.c  dgemm.c  dgemv.c  dger.c  dmyblas2.c  dnrm2.c  dpotrf.c  dpotrs.c  drot.c  dscal.c  dswap.c  dsygv.c  dsymm.c  dsymv.c  dsyr2.c  dsyr2k.c  dsyrk.c  dtrmm.c  dtrmv.c  dtrsm.c  dtrsv.c  f2c.h  hypre_blas.h  hypre_no_blas.h  idamax.c  s_cmp.c  s_copy.c
config/: HYPRE_config.h.cmake.in  HYPRE_config.h.in  Makefile.am  Makefile.config.in  Makefile.in  acx_blas.m4  acx_lapack.m4  acx_misc.m4  bootstrap  configure.ac  configure.in  hypre_blas_macros.m4  hypre_find_blas.m4  hypre_find_lapack.m4  hypre_lapack_macros.m4  hypre_macros.m4  hypre_macros_misc.m4  windows.sh
distributed_matrix/: HYPRE_distributed_matrix.c  HYPRE_distributed_matrix_mv.h  HYPRE_distributed_matrix_protos.h  HYPRE_distributed_matrix_types.h  HYPRE_types.h  Makefile  Makefile.alpha  Makefile.am  Makefile.in  distributed_matrix.c  distributed_matrix.h  distributed_matrix_ISIS.c  distributed_matrix_ISIS.cc  distributed_matrix_PETSc.c  distributed_matrix_parcsr.c  internal_protos.h
docs/: HYPRE_ref_manual.ps  HYPRE_usr_manual.ps  Makefile  Makefile.am  Makefile.in  TRANSITION_INFO  autoconfig.txt  bHYPRE_ref_manual.ps  babel_transition_info.txt  block_structured.eps  bref_manual.dxx  bref_manual.dxx.in  code_ref.dxx  coding_style.txt  concep_iface.eps  concep_iface.ps  copyright  copyright.tex  copyright.txt  crs_build.sh  dev_QA.dxx  dev_QA.tex  dev_autotest.dxx  dev_autotest.tex  dev_babel.tex  dev_coding.dxx  dev_coding.tex  dev_design.dxx  dev_design.tex  dev_documentation.dxx  dev_documentation.tex  dev_error_handling.dxx  dev_error_handling.tex  dev_fei.tex  dev_install.dxx  dev_install.tex  dev_language_interop.dxx  dev_language_interop.tex  dev_makefile.dxx  dev_makefile.tex  (+88 more)
krylov/: HYPRE_MatvecFunctions.h  HYPRE_bicgstab.c  HYPRE_cgnr.c  HYPRE_flexgmres.c  HYPRE_gmres.c  HYPRE_krylov.h  HYPRE_lgmres.c  HYPRE_lobpcg.c  HYPRE_lobpcg.h  HYPRE_pcg.c  Makefile  Makefile.am  Makefile.in  all_krylov.h  bicgstab.c  bicgstab.h  cgnr.c  cgnr.h  flexgmres.c  flexgmres.h  gmres.c  gmres.h  headers  krylov.h  lgmres.c  lgmres.h  lobpcg.c  lobpcg.h  pcg.c  pcg.h
lapack/: Makefile  Makefile.am  Makefile.in  Makefile.template  README  dbdsqr.c  dgebd2.c  dgebrd.c  dgelq2.c  dgelqf.c  dgels.c  dgeqr2.c  dgeqrf.c  dgesvd.c  dgetf2.c  dgetrf.c  dgetrs.c  dlabad.c  dlabrd.c  dlacpy.c  dlae2.c  dlaev2.c  dlamch.c  dlange.c  dlanst.c  dlansy.c  dlapy2.c  dlarf.c  dlarfb.c  dlarfg.c  dlarft.c  dlartg.c  dlas2.c  dlascl.c  dlaset.c  dlasq1.c  dlasq2.c  dlasq3.c  dlasq4.c  dlasq5.c  (+39 more)
lib/: Makefile  Makefile.am  Makefile.in  Makefile.template
matrix_matrix/: HYPRE_BuildIJMatrixFromDistributedMatrix.c  HYPRE_ConvertPETScMatrixToDistributedMatrix.c  HYPRE_ConvertParCSRMatrixToDistributedMatrix.c  HYPRE_matrix_matrix_protos.h  Makefile  Makefile.am  Makefile.in  header.h  internal_protos.h
parcsr_ls/: Common.h  F90_HYPRE_ams.c  F90_HYPRE_par_laplace.c  F90_HYPRE_parcsr_Euclid.c  F90_HYPRE_parcsr_ParaSails.c  F90_HYPRE_parcsr_amg.c  F90_HYPRE_parcsr_bicgstab.c  F90_HYPRE_parcsr_block.c  F90_HYPRE_parcsr_cgnr.c  F90_HYPRE_parcsr_flexgmres.c  F90_HYPRE_parcsr_gmres.c  F90_HYPRE_parcsr_hybrid.c  F90_HYPRE_parcsr_int.c  F90_HYPRE_parcsr_lgmres.c  F90_HYPRE_parcsr_pcg.c  F90_HYPRE_parcsr_pilut.c  F90_HYPRE_parcsr_schwarz.c  F90_hypre_laplace.c  F90_par_laplace.c  HYPRE_ads.c  HYPRE_ame.c  HYPRE_ams.c  HYPRE_parcsr_Euclid.c  HYPRE_parcsr_ParaSails.c  HYPRE_parcsr_amg.c  HYPRE_parcsr_bicgstab.c  HYPRE_parcsr_block.c  HYPRE_parcsr_cgnr.c  HYPRE_parcsr_flexgmres.c  HYPRE_parcsr_gmres.c  HYPRE_parcsr_hybrid.c  HYPRE_parcsr_int.c  HYPRE_parcsr_int.h  HYPRE_parcsr_lgmres.c  HYPRE_parcsr_ls.h  HYPRE_parcsr_ml.c  HYPRE_parcsr_ml.cpp  HYPRE_parcsr_pcg.c  HYPRE_parcsr_pilut.c  HYPRE_parcsr_schwarz.c  (+81 more)
parcsr_mv/: F90_HYPRE_parcsr_matrix.c  F90_HYPRE_parcsr_vector.c  F90_par_vector.c  F90_parcsr_matrix.c  HYPRE_parcsr_matrix.c  HYPRE_parcsr_mv.h  HYPRE_parcsr_vector.c  Makefile  Makefile.am  Makefile.in  _hypre_parcsr_mv.h  communication.c  communication.h  communicationT.c  driver.c  driver_aat.c  driver_boolaat.c  driver_boolmatmul.c  driver_mat_multivec.c  driver_matmul.c  driver_matvec.c  driver_multivec.c  headers  headers.h  hypre_parcsr_mv.h  new_commpkg.c  new_commpkg.h  numbers.c  numbers.h  par_chord_matrix.h  par_csr_aat.c  par_csr_assumed_part.c  par_csr_assumed_part.h  par_csr_bool_matop.c  par_csr_bool_matrix.c  par_csr_communication.c  par_csr_matop.c  (+12 more)
(+16238 files in other folders)
